--- a/lectures/110_python_py_files/120-clean-code.ipynb
+++ b/lectures/110_python_py_files/120-clean-code.ipynb
@@ -25,6 +25,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a38ea0a-086c-4b5a-945b-87df8a10289c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "id": "6bcb99f1-ce31-4b2e-ade5-b64b1aa5eaa9",
+   "metadata": {},
+   "source": [
+    "!ruff format --help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51357867-d26a-4c96-a0c5-83109aeb8b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ff046d3-ddb2-46e7-8ca4-8266fd7abcd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "averagePrice"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6911d94d-7053-4b55-9f6f-8a68049714bd",
    "metadata": {},
@@ -120,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "eb1d58a1-d93b-460f-b071-ec56f465a61f",
    "metadata": {},
    "outputs": [],
@@ -154,32 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "25df519e-5872-4e36-9ed3-d8e2fe626a5a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function calculate_feature_importance in module __main__:\n",
-      "\n",
-      "calculate_feature_importance(model, feature_name)\n",
-      "    Calculate feature importance scores from a trained random forest model.\n",
-      "    \n",
-      "    Args:\n",
-      "        model: Trained random forest classifier\n",
-      "        feature_names: List of feature names corresponding to model features\n",
-      "        \n",
-      "    Returns:\n",
-      "        Dictionary mapping feature names to their importance scores\n",
-      "        \n",
-      "    Raises:\n",
-      "        ValueError: If length of feature_names doesn't match model features\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(calculate_feature_importance)"
    ]
@@ -284,18 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "31540ad5-eb92-4b69-bb10-8ae3caad501f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting messy.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile messy.py\n",
     "# messy.py\n",
@@ -359,183 +363,57 @@
    "source": [
     "You may have to install these tools:\n",
     "\n",
-    "`pip install pylint black`"
+    "`pip install ruff pylint black`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "3cd2a9f5-fa06-4656-900e-1baadbece923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install ruff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3c334907-d30c-4ccb-bd3e-3c71b5a16975",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "************* Module messy\n",
-      "messy.py:11:0: C0303: Trailing whitespace (trailing-whitespace)\n",
-      "messy.py:16:0: C0303: Trailing whitespace (trailing-whitespace)\n",
-      "messy.py:21:0: W0311: Bad indentation. Found 9 spaces, expected 12 (bad-indentation)\n",
-      "messy.py:22:0: W0311: Bad indentation. Found 10 spaces, expected 16 (bad-indentation)\n",
-      "messy.py:23:0: W0311: Bad indentation. Found 9 spaces, expected 12 (bad-indentation)\n",
-      "messy.py:24:0: W0311: Bad indentation. Found 12 spaces, expected 16 (bad-indentation)\n",
-      "messy.py:1:0: C0114: Missing module docstring (missing-module-docstring)\n",
-      "messy.py:2:0: C0410: Multiple imports on one line (pandas, numpy) (multiple-imports)\n",
-      "Exception on node <ImportFrom l.3 at 0x104cbe3c0> in file '/Users/shahbaz/Documents/GitHub/ProgrammingForAnalytics/lectures/110_python_py_files/messy.py'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/pylint/checkers/imports.py\", line 846, in _get_imported_module\n",
-      "    return importnode.do_import_module(modname)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/nodes/_base_nodes.py\", line 146, in do_import_module\n",
-      "    return mymodule.import_module(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/nodes/scoped_nodes/scoped_nodes.py\", line 527, in import_module\n",
-      "    return AstroidManager().ast_from_module_name(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/manager.py\", line 232, in ast_from_module_name\n",
-      "    return self.ast_from_file(found_spec.location, modname, fallback=False)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/manager.py\", line 124, in ast_from_file\n",
-      "    return AstroidBuilder(self).file_build(filepath, modname)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/builder.py\", line 144, in file_build\n",
-      "    module, builder = self._data_build(data, modname, path)\n",
-      "                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/builder.py\", line 204, in _data_build\n",
-      "    module = builder.visit_module(node, modname, node_file, package)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/rebuilder.py\", line 254, in visit_module\n",
-      "    [self.visit(child, newnode) for child in node.body],\n",
-      "     ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/astroid/rebuilder.py\", line 603, in visit\n",
-      "    visit_method = getattr(self, visit_name)\n",
-      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AttributeError: 'TreeRebuilder' object has no attribute 'visit_typealias'\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/pylint/utils/ast_walker.py\", line 91, in walk\n",
-      "    callback(astroid)\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/pylint/checkers/imports.py\", line 541, in visit_importfrom\n",
-      "    imported_module = self._get_imported_module(node, basename)\n",
-      "                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.12/site-packages/pylint/checkers/imports.py\", line 871, in _get_imported_module\n",
-      "    raise astroid.AstroidError from e\n",
-      "astroid.exceptions.AstroidError\n",
-      "messy.py:1:0: F0002: messy.py: Fatal error while checking 'messy.py'. Please open an issue in our bug tracker so we address this. There is a pre-filled template that you can use in '/Users/shahbaz/Library/Caches/pylint/pylint-crash-2025-06-30-20-12-10.txt'. (astroid-error)\n",
-      "\n",
-      "------------------------------------------------------------------\n",
-      "Your code has been rated at 0.00/10 (previous run: 0.00/10, +0.00)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pylint messy.py"
+    "#!pylint messy.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "8e5e7354-9d14-4b6b-9104-0d8a1c69f701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ruff check messy.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "15bd1c7f-3daf-42db-aa55-97119a13e8ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m--- messy.py\t2025-04-17 01:12:17.215143+00:00\u001b[0m\n",
-      "\u001b[1m+++ messy.py\t2025-07-01 01:22:20.017968+00:00\u001b[0m\n",
-      "\u001b[36m@@ -1,44 +1,51 @@\u001b[0m\n",
-      " # messy.py\n",
-      "\u001b[31m-import pandas as pd,numpy as np\u001b[0m\n",
-      "\u001b[31m-from typing import List,Dict,Any\u001b[0m\n",
-      "\u001b[32m+import pandas as pd, numpy as np\u001b[0m\n",
-      "\u001b[32m+from typing import List, Dict, Any\u001b[0m\n",
-      " import matplotlib.pyplot as plt\n",
-      " \n",
-      "\u001b[32m+\u001b[0m\n",
-      " class dataProcessor:\n",
-      "\u001b[31m-    def __init__(self,input_file:str,    output_file:str='processed.csv'):\u001b[0m\n",
-      "\u001b[31m-        self.input=input_file\u001b[0m\n",
-      "\u001b[31m-        self.output_file=output_file\u001b[0m\n",
-      "\u001b[31m-        self.data=None\u001b[0m\n",
-      "\u001b[31m-    \u001b[0m\n",
-      "\u001b[32m+    def __init__(self, input_file: str, output_file: str = \"processed.csv\"):\u001b[0m\n",
-      "\u001b[32m+        self.input = input_file\u001b[0m\n",
-      "\u001b[32m+        self.output_file = output_file\u001b[0m\n",
-      "\u001b[32m+        self.data = None\u001b[0m\n",
-      "\u001b[32m+\u001b[0m\n",
-      "     def Load_data(self):\n",
-      "         \"\"\"loads data from csv file\"\"\"\n",
-      "\u001b[31m-        self.data=pd.read_csv(self.input)\u001b[0m\n",
-      "\u001b[32m+        self.data = pd.read_csv(self.input)\u001b[0m\n",
-      "         return self.data\n",
-      "\u001b[31m-    \u001b[0m\n",
-      "\u001b[31m-    def process(self,columns_to_process:List[str]=[],aggfunc:str='mean')->pd.DataFrame:\u001b[0m\n",
-      "\u001b[31m-        if len(columns_to_process)==0: return self.data\u001b[0m\n",
-      "\u001b[31m-        processed_data={}\u001b[0m\n",
-      "\u001b[32m+\u001b[0m\n",
-      "\u001b[32m+    def process(\u001b[0m\n",
-      "\u001b[32m+        self, columns_to_process: List[str] = [], aggfunc: str = \"mean\"\u001b[0m\n",
-      "\u001b[32m+    ) -> pd.DataFrame:\u001b[0m\n",
-      "\u001b[32m+        if len(columns_to_process) == 0:\u001b[0m\n",
-      "\u001b[32m+            return self.data\u001b[0m\n",
-      "\u001b[32m+        processed_data = {}\u001b[0m\n",
-      "         for col in columns_to_process:\n",
-      "\u001b[31m-         if col in self.data.columns:\u001b[0m\n",
-      "\u001b[31m-          processed_data[col]=getattr(self.data[col],aggfunc)()\u001b[0m\n",
-      "\u001b[31m-         else:\u001b[0m\n",
-      "\u001b[31m-            print(f\"Warning: Column {col} not found\")\u001b[0m\n",
-      "\u001b[31m-        return pd.DataFrame(processed_data,index=[0])\u001b[0m\n",
-      "\u001b[32m+            if col in self.data.columns:\u001b[0m\n",
-      "\u001b[32m+                processed_data[col] = getattr(self.data[col], aggfunc)()\u001b[0m\n",
-      "\u001b[32m+            else:\u001b[0m\n",
-      "\u001b[32m+                print(f\"Warning: Column {col} not found\")\u001b[0m\n",
-      "\u001b[32m+        return pd.DataFrame(processed_data, index=[0])\u001b[0m\n",
-      " \n",
-      "\u001b[31m-    def visualize_data(self,   column:str,   PlotType:str='bar'   )->None:\u001b[0m\n",
-      "\u001b[31m-        if self.data is None:raise ValueError('No data loaded')\u001b[0m\n",
-      "\u001b[31m-        plt.figure(figsize=(10,     5))\u001b[0m\n",
-      "\u001b[31m-        if PlotType=='bar':\u001b[0m\n",
-      "\u001b[31m-            self.data[column].value_counts().plot(kind='bar')\u001b[0m\n",
-      "\u001b[31m-        elif     PlotType=='hist':\u001b[0m\n",
-      "\u001b[32m+    def visualize_data(self, column: str, PlotType: str = \"bar\") -> None:\u001b[0m\n",
-      "\u001b[32m+        if self.data is None:\u001b[0m\n",
-      "\u001b[32m+            raise ValueError(\"No data loaded\")\u001b[0m\n",
-      "\u001b[32m+        plt.figure(figsize=(10, 5))\u001b[0m\n",
-      "\u001b[32m+        if PlotType == \"bar\":\u001b[0m\n",
-      "\u001b[32m+            self.data[column].value_counts().plot(kind=\"bar\")\u001b[0m\n",
-      "\u001b[32m+        elif PlotType == \"hist\":\u001b[0m\n",
-      "             self.data[column].hist()\n",
-      "\u001b[31m-        plt.title(f'Visualization of {column}')\u001b[0m\n",
-      "\u001b[32m+        plt.title(f\"Visualization of {column}\")\u001b[0m\n",
-      "         plt.show()\n",
-      " \n",
-      "\u001b[32m+\u001b[0m\n",
-      " def main():\n",
-      "\u001b[31m-    processor=dataProcessor('data.csv')\u001b[0m\n",
-      "\u001b[32m+    processor = dataProcessor(\"data.csv\")\u001b[0m\n",
-      "     df = processor.Load_data()\n",
-      "\u001b[31m-    processed=processor.process(['age','salary'],aggfunc='mean')\u001b[0m\n",
-      "\u001b[31m-    processor.visualize_data('age','hist')\u001b[0m\n",
-      "\u001b[32m+    processed = processor.process([\"age\", \"salary\"], aggfunc=\"mean\")\u001b[0m\n",
-      "\u001b[32m+    processor.visualize_data(\"age\", \"hist\")\u001b[0m\n",
-      " \n",
-      "\u001b[31m-if __name__=='__main__':\u001b[0m\n",
-      "\u001b[32m+\u001b[0m\n",
-      "\u001b[32m+if __name__ == \"__main__\":\u001b[0m\n",
-      "     main()\n",
-      "\u001b[1mwould reformat messy.py\u001b[0m\n",
-      "\n",
-      "\u001b[1mAll done! ✨ 🍰 ✨\u001b[0m\n",
-      "\u001b[34m\u001b[1m1 file \u001b[0m\u001b[1mwould be reformatted\u001b[0m.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!black messy.py --diff --color"
+    "#!black messy.py --diff --color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bfb022c-6fb1-456d-86d9-661ca20191ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ruff format --diff messy.py "
    ]
   },
   {
@@ -571,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
