--- a/lectures/025_all_of_python_basics/190-comprehensions_and_generators.ipynb
+++ b/lectures/025_all_of_python_basics/190-comprehensions_and_generators.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostCell loaded\n",
+      "Loading config file from /Users/simonjung/Documents/UChicago FinMath/2025 Autumn/Python for Financial Data Science/lectures_original/postcell.conf\n",
+      "Registered user Simon_Jung at https://postcell.io/post_cell\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext postcell\n",
     "%postcell register"
@@ -35,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(20))"
    ]
@@ -51,9 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[x for x in range(20)]"
    ]
@@ -67,9 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[x + 1 for x in range(20)]"
    ]
@@ -83,9 +126,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 4,\n",
+       " 9,\n",
+       " 16,\n",
+       " 25,\n",
+       " 36,\n",
+       " 49,\n",
+       " 64,\n",
+       " 81,\n",
+       " 100,\n",
+       " 121,\n",
+       " 144,\n",
+       " 169,\n",
+       " 196,\n",
+       " 225,\n",
+       " 256,\n",
+       " 289,\n",
+       " 324,\n",
+       " 361]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[x**2 for x in range(20)]"
    ]
@@ -106,11 +179,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 4,\n",
+       " 9,\n",
+       " 16,\n",
+       " 25,\n",
+       " 36,\n",
+       " 49,\n",
+       " 64,\n",
+       " 81,\n",
+       " 100,\n",
+       " 121,\n",
+       " 144,\n",
+       " 169,\n",
+       " 196,\n",
+       " 225,\n",
+       " 256,\n",
+       " 289,\n",
+       " 324,\n",
+       " 361]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rslt = list()\n",
     "\n",
@@ -910,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
